# escape-flavoured-virtual-elevation-recipe

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  ve.spec  ve_analyzer.py
.assets/: VirtualElevationRecipes.icns
.github/workflows/: build.yml
config/: settings.py
core/: calculations.py  config.py  optimization.py  visualization.py
data_io/: data_processing.py  fit_parser.py
models/: fit_file.py  virtual_elevation.py
ui/: __init__.py  analysis_result.py  analysis_window.py  async_worker.py  file_selector.py  gps_gate_result.py  gps_lap_result.py  locale_utils.py  map_widget.py  out_and_back_result.py  slider_textbox.py  ve_plot.py
utils/: file_handling.py  wind_arrow.py
